# QHub

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  compose.override.yaml.example  compose.yaml  cspell.config.yaml
.claude/: settings.local.json
.claude/agents/: code-reviewer.md  migration-helper.md  test-runner.md
.claude/prompt_template/: api-endpoint.xml  bugfix.xml  code-review.xml  db-migration.xml  feature.xml  htmx-component.xml  investigate.xml  performance.xml  refactor.xml  terraform.xml  test-suite.xml
.claude/reports/: 20260216-100740-feat-add-post-commit-hook-for-automated-codebase-insights.md  20260216-100945-coverage-analysis.md  20260216-100945-detailed-metrics.md  (+11 more)
.claude/rules/: tdd.md  (+3 more)
.devcontainer/: Dockerfile  compose.override.yaml.example  compose.yaml  devcontainer.json  firewall.sh  setup.sh  whitelist_domains.conf
.githooks/: post-commit
.serena/: project.yml
apps/: go.work  go.work.sum
apps/sdk-python/: README.md  pyproject.toml
apps/sdk-python/src/qhub/: __init__.py  client.py  errors.py  types.py
apps/sdk-python/src/qhub/resources/: __init__.py  analytics.py  consulting.py  evaluations.py  industries.py  logs.py  organizations.py  projects.py  prompts.py  search.py  tags.py  versions.py
apps/sdk-python/tests/: conftest.py  test_client.py  test_resources.py  test_types.py
specs/: api-design.md  architecture.md  competitive-analysis.md  database-schema.md  differentiation.md  domain-model.md  implementation-progress.md  implementation-roadmap.md  positioning-strategy.md  product-overview.md  service-concept.md
(+458 files in other folders)
