[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qhub-sdk"
version = "0.1.0"
description = "Python SDK for the QHub prompt/answer version management API"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qhub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
